3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__and_seq_rule_directly.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
and_seq: 'hello world'
  primary_expr: 'hello'
    term_expr: 'hello'
      simple_term: 'hello'
        value: 'hello'
          STRING: 'hello'
            UNQUOTED_STRING: 'hello'
              USTRING: 'hello'
  primary_expr: 'world'
    term_expr: 'world'
      simple_term: 'world'
        value: 'world'
          STRING: 'world'
            UNQUOTED_STRING: 'world'
              USTRING: 'world'
