3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__complex_expression.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'hello AND world OR foo AND bar'
  expression: 'hello AND world OR foo AND bar'
    or_seq: 'hello AND world OR foo AND bar'
      and_seq: 'hello AND world'
        primary_expr: 'hello'
          term_expr: 'hello'
            simple_term: 'hello'
              value: 'hello'
                STRING: 'hello'
                  UNQUOTED_STRING: 'hello'
                    USTRING: 'hello'
        and_op: 'AND'
        primary_expr: 'world'
          term_expr: 'world'
            simple_term: 'world'
              value: 'world'
                STRING: 'world'
                  UNQUOTED_STRING: 'world'
                    USTRING: 'world'
      or_op: 'OR'
      and_seq: 'foo AND bar'
        primary_expr: 'foo'
          term_expr: 'foo'
            simple_term: 'foo'
              value: 'foo'
                STRING: 'foo'
                  UNQUOTED_STRING: 'foo'
                    USTRING: 'foo'
        and_op: 'AND'
        primary_expr: 'bar'
          term_expr: 'bar'
            simple_term: 'bar'
              value: 'bar'
                STRING: 'bar'
                  UNQUOTED_STRING: 'bar'
                    USTRING: 'bar'
  EOI: ''
