3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__operator_equals.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'status=active'
  expression: 'status=active'
    or_seq: 'status=active'
      and_seq: 'status=active'
        primary_expr: 'status=active'
          term_expr: 'status=active'
            field_term: 'status=active'
              FIELD: 'status'
              OPERATOR: '='
              value: 'active'
                STRING: 'active'
                  UNQUOTED_STRING: 'active'
                    USTRING: 'active'
  EOI: ''
