3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__text_expression_with_numbers.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'amd64 64bit'
  expression: 'amd64 64bit'
    or_seq: 'amd64 64bit'
      and_seq: 'amd64 64bit'
        primary_expr: 'amd64'
          term_expr: 'amd64'
            simple_term: 'amd64'
              value: 'amd64'
                STRING: 'amd64'
                  UNQUOTED_STRING: 'amd64'
                    USTRING: 'amd64'
        primary_expr: '64bit'
          term_expr: '64bit'
            simple_term: '64bit'
              value: '64bit'
                STRING: '64bit'
                  UNQUOTED_STRING: '64bit'
                    USTRING: '64bit'
  EOI: ''
