3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__truethy_string.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'truethy'
  expression: 'truethy'
    or_seq: 'truethy'
      and_seq: 'truethy'
        primary_expr: 'truethy'
          term_expr: 'truethy'
            simple_term: 'truethy'
              value: 'truethy'
                STRING: 'truethy'
                  UNQUOTED_STRING: 'truethy'
                    USTRING: 'truethy'
  EOI: ''
