3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__whitespace_only.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: '   '
  EOI: ''
