3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__whitespace_trimming.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: '   elided   '
  expression: 'elided   '
    or_seq: 'elided   '
      and_seq: 'elided'
        primary_expr: 'elided'
          term_expr: 'elided'
            simple_term: 'elided'
              value: 'elided'
                STRING: 'elided'
                  UNQUOTED_STRING: 'elided'
                    USTRING: 'elided'
  EOI: ''
