3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__wildcard_middle.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'hello*world'
  expression: 'hello*world'
    or_seq: 'hello*world'
      and_seq: 'hello*world'
        primary_expr: 'hello*world'
          term_expr: 'hello*world'
            simple_term: 'hello*world'
              value: 'hello*world'
                STRING: 'hello*world'
                  UNQUOTED_STRING: 'hello*world'
                    USTRING: 'hello'
                    WILDCARD: '*'
                    USTRING: 'world'
  EOI: ''
