3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__wildcard_prefix.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: '*world'
  expression: '*world'
    or_seq: '*world'
      and_seq: '*world'
        primary_expr: '*world'
          term_expr: '*world'
            simple_term: '*world'
              value: '*world'
                STRING: '*world'
                  UNQUOTED_STRING: '*world'
                    WILDCARD: '*'
                    USTRING: 'world'
  EOI: ''
