3rdparty/proton-foundation-search-0.5.1-preview/src/query/expression/snapshots/proton_foundation_search__query__expression__pest_parser__pest_test__tests__wildcard_suffix.snap
---
source: packages/search/src/query/expression/pest_test.rs
expression: tree
---
query: 'hello*'
  expression: 'hello*'
    or_seq: 'hello*'
      and_seq: 'hello*'
        primary_expr: 'hello*'
          term_expr: 'hello*'
            simple_term: 'hello*'
              value: 'hello*'
                STRING: 'hello*'
                  UNQUOTED_STRING: 'hello*'
                    USTRING: 'hello'
                    WILDCARD: '*'
  EOI: ''
